force-app/main/default/objects/sugati__Airline_membership__c/sugati__Airline_membership__c.object-meta.xml
<CustomObject>
    <label>Airline membership</label>
    <nameField>
        <label>Airline Membership No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>