force-app/main/default/objects/sugati__Airline_membership__c/fields/sugati__AM_Airline__c.field-meta.xml
<CustomField>
    <fullName>sugati__AM_Airline__c</fullName>
    <label>Airline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>