force-app/main/default/objects/sugati__Airline_membership__c/fields/sugati__AM_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__AM_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Airline memberships</relationshipLabel>
    <relationshipName>Airline_memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>