force-app/main/default/objects/sugati__Airline_membership__c/fields/sugati__AM_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__AM_Member_Name__c</fullName>
    <label>Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>