force-app/main/default/objects/sugati__Airline_membership__c/fields/sugati__Membership_number__c.field-meta.xml
<CustomField>
    <fullName>sugati__Membership_number__c</fullName>
    <label>Membership number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>